workspace = { members = [ "net/wasabi","saba_core"] }
[package]
author = ["sada"]
name = "browser"
version = "0.1.0"
edition = "2021"
default-run = "browser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:noli"]

[[bin]]
name = "browser"
path = "src/main.rs"
required_features = ["wasabi"]

[dependencies]
saba_core = { path = "./saba_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
